--- a/.gitignore
+++ b/.gitignore
@@ -138,4 +138,5 @@ tools/kr_v4l2_stream
 tests/kr_wayland_test
 clients/kr_example_client
 clients/kr_test_client
+clients/kr_snapshot
 tests/kr_pool_test
