--- a/tools/code/gen/Makefile.am
+++ b/tools/code/gen/Makefile.am
@@ -1,8 +1,11 @@
 include $(top_srcdir)/common.mk
 
-AM_CPPFLAGS += '-I../analysis/gather_structs/'
+codegen_bootstrap_CPPFLAGS = '-I../analysis/gather_structs/'
+codegen_bootstrap_CPPFLAGS += '-I../'
+codegen_cfg_CPPFLAGS = ${codegen_bootstrap_CPPFLAGS}
+codegen_auto_CPPFLAGS = ${codegen_bootstrap_CPPFLAGS}
 
-noinst_PROGRAMS = codegen_bootstrap codegen_pre codegen_auto codegen_cfg
+noinst_PROGRAMS = codegen_bootstrap codegen_pre codegen_cfg codegen_auto
 
 .PHONY: cleanall
 
@@ -17,10 +20,10 @@ codegen_utils.c \
 formats/codegen_text.c \
 formats/codegen_json.c \
 formats/codegen_dejson.c \
-formats/codegen_sizeof.c \
-formats/codegen_jschema.c \
 formats/codegen_ebml.c \
 formats/codegen_helper.c \
+formats/codegen_sizeof.c \
+formats/codegen_jschema.c \
 codegen_bootstrap_utils.c \
 bootstrapped.c \
 codegen_auto.c
